--- a/message/views/en.html/item.en.html
+++ b/message/views/en.html/item.en.html
@@ -1,8 +1,10 @@
 <li>
-	<a 
-		class="explore" 
-		href="http://{% remoteip %}:{% remoteport %}/" 
-		title="Last seen on {% start %}">
-		{% &nickname %}
-	</a>
+	<p>
+		{% text %}
+	</p>
+	<class class="attribution">
+		<span class="username">{% username %}</span>
+		posted this on
+		<span class="start">{% start %}</span>
+	</class>
 </li>
