--- a/message/views/en.html/list.en.html
+++ b/message/views/en.html/list.en.html
@@ -1,8 +1,4 @@
-<span class="title">Recently on-line</span>
-<ul class="online users" id="onlineusers">
-	{% online %}
-</ul>
-<span class="title">Not recently on-line</span>
-<ul class="offline users" id="offlineusers">
-	{% offline %}
+<span class="title">Messages</span>
+<ul id="messages">
+	{% items %}
 </ul>
