Tweaked message viewing and posting

--- a/message/views/en.html/item.en.html
+++ b/message/views/en.html/item.en.html
@@ -4,7 +4,7 @@
 	</p>
 	<class class="attribution">
 		<span class="username">{% username %}</span>
-		posted this on
-		<span class="start">{% start %}</span>
+		<span class="date">{% date %}</span>
+		<span class="time">{% time %}</span>
 	</class>
 </li>
