--- a/message/views/en.html/item.en.html
+++ b/message/views/en.html/item.en.html
@@ -6,5 +6,6 @@
 		<span class="username">{% username %}</span>
 		<span class="date">{% date %}</span>
 		<span class="time">{% time %}</span>
+		<span id="do{% beep %}"></span>
 	</class>
 </li>
